--- a/fakerti/src/main/res/layout/group/layout/dialog_loading.xml
+++ b/fakerti/src/main/res/layout/group/layout/dialog_loading.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:layout_width="match_parent" android:layout_height="wrap_content">
     <ProgressBar
+        android:id="@+id/pro"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-</RelativeLayout>
+    <TextView
+        android:id="@+id/tv_load"
+        android:textColor="@color/white"
+        android:layout_below="@id/pro"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="2dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</LinearLayout>
