--- a/app/src/main/res/layout/item_main_grid.xml
+++ b/app/src/main/res/layout/item_main_grid.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.zt.recordmanager.view.widget.MyCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:foreground="?android:attr/selectableItemBackgroundBorderless"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="4dp"
     android:id="@+id/ll_father"
+
     android:gravity="center"
     android:orientation="vertical"
     app:cardCornerRadius="4dp">
