1.perfect CheckActivity and RfidUtil Class

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="qmui_tip_dialog_bg">@drawable/dg_back</item>
+        <!--<item name="qmui_tip_dialog_bg">@drawable/dg_back</item>-->
     </style>
 
     <style name="main_grid_tv">
