--- a/app/src/main/res/layout/ac_check.xml
+++ b/app/src/main/res/layout/ac_check.xml
@@ -1,9 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MainActivity">
+    tools:context=".view.MainActivity"
+    android:background="@color/white"
+    android:orientation="vertical">
+    <FrameLayout
+        android:id="@+id/ll_fr"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:layout_centerHorizontal="true"
+        android:background="@color/win_end"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <com.zt.recordmanager.view.widget.RadarView
+            android:id="@+id/my_radar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
 
-
-</LinearLayout>
+    <RelativeLayout
+        android:layout_below="@id/ll_fr"
+        android:layout_marginTop="12dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            style="@style/check_hint_num"
+            android:text="已扫描"
+            android:layout_toLeftOf="@id/tv_num"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:id="@+id/tv_num"
+            android:text="0"
+            android:layout_centerHorizontal="true"
+            style="@style/check_hint_num"
+            android:textSize="40sp"
+            android:maxLength="10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:text="个"
+            style="@style/check_hint_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/tv_num"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="8dp"
+            />
+    </RelativeLayout>
+    <LinearLayout
+        android:id="@+id/ll_open"
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/bt_status"
+            android:text="开始盘点"
+            style="@style/bt_uit"
+            android:background="@drawable/click_select"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/bt_update"
+            android:visibility="gone"
+            android:text="结果上传"
+            style="@style/bt_uit"
+            android:background="@drawable/click_select_start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+</RelativeLayout>
